--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -84,8 +84,8 @@
 
     &--listView {
         position: absolute;
-
-        display: flox;
+        margin-top: -.7rem;
+        display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: space-around;
